kubernetes-files/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: API-Automation
  labels:
    app: API-Automation
spec:
  replicas: 1
  selector:
    matchLabels:
      app: API-Automation
  template:
    metadata:
      labels:
        app: API-Automation
        version: v1
    spec:
      containers:
        - name: API-Automation
          image: REG/IMAGE:TAG
          resources:
              requests:
                memory: 3Gi
                cpu: 1250m
              limits:
                memory: 3.5Gi
                cpu: 1500m
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: API-Automation
  labels:
    app: API-Automation
spec:
  type: NodePort
  selector:
    app: API-Automation
  ports:
    - port: 8080
