kubernetes-files/qa-istio-rules.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: API-Automation-destination
spec:
  host: API-Automation
  trafficPolicy:
    connectionPool:
      http:
        maxRequestsPerConnection: 1
    loadBalancer:
      simple: LEAST_CONN
    outlierDetection:
      baseEjectionTime: 3s
      consecutive5xxErrors: 500
      interval: 2s
      maxEjectionPercent: 30
  subsets:
    - name: v1
      labels:
        version: v1
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: API-Automation-route
spec:
  hosts:
    - "*"
  gateways:
    - istio-gateway
  http:
    - match:
        - uri:
            prefix: "/API-Automation/"
      rewrite:
        uri: "/"
      route:
        - destination:
            host: API-Automation
            subset: v1
      corsPolicy:
        allowOrigins:
          - exact: "*"
        allowMethods:
          - POST
          - GET
          - PUT
          - DELETE
          - HEAD
          - PATCH
          - OPTIONS
          - TRACE
          - CONNECT
        allowCredentials: false
        allowHeaders:
          - "*"
        maxAge: "24h"
      retries:
        attempts: 3
        perTryTimeout: 2s

---
### jwt auth
---
apiVersion: "security.istio.io/v1beta1"
kind: "RequestAuthentication"
metadata:
  name: "API-jwt-auth"
  namespace: default
spec:
  selector:
    matchLabels:
      app: API-Automation
  jwtRules:
    - issuer: "gaian.com"
      jwksUri: "http://dev-ingress-gateway.gaiansolutions.com/iam-service/.well-known/jwks.json"
      forwardOriginalToken: true

### swagger rule
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  namespace: default
  name: API-swagger-rules
spec:
  selector:
    matchLabels:
      app: API-Automation
  action: ALLOW
  rules:
    - from:
        - source:
            principals: ["cluster.local/ns/istio-system/sa/istio-ingressgateway-service-account"]
    - to:
        - operation:
            methods: ["GET", "HEAD"]


### service rule
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  namespace: default
  name: API-other-rules
spec:
  selector:
    matchLabels:
      app: API-Automation
  action: ALLOW
  rules:
    - to:
        - operation:
            methods: ["GET","POST","PUT","DELETE"]

      when:
        - key: request.auth.claims[authorities]
          values: ["ROLE_MARKETPLACE_USER"]
      from:
        - source:
            requestPrincipals: ["gaian.com/gaian.com"]
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  namespace: default
  name: email-service-to-API-Automation-rules
spec:
  selector:
    matchLabels:
      app: API-Automation
  action: ALLOW
  rules:
  - from:
    - source:
        principals: ["cluster.local/ns/default/sa/email-service", "cluster.local/ns/default/sa/mef-service"]
    to:
    - operation:
        methods: ["POST"]
